--- a/package.json
+++ b/package.json
@@ -6,13 +6,21 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "npx expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "^4.0.0",
     "expo": "~52.0.19",
+    "expo-av": "^15.0.1",
+    "expo-document-picker": "^13.0.1",
     "expo-status-bar": "~2.0.0",
-    "react": "18.3.1",
-    "react-native": "0.76.5"
+    "expo-video": "^2.0.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-native": "0.76.5",
+    "react-native-web": "^0.19.13",
+    "react-redux": "^9.2.0",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
