--- a/package.json
+++ b/package.json
@@ -20,11 +20,10 @@
     "ffmpeg-kit-react-native": "^6.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-native": "0.76.5",
+    "react-native": "0.72",
     "react-native-ffmpeg": "^0.5.2",
     "react-native-fs": "^2.20.0",
-    "react-native-video-processing": "^1.7.2",
-    "react-native-web": "^0.19.13",
+    "react-native-web": "0.18",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1"
   },
