--- a/package.json
+++ b/package.json
@@ -9,21 +9,22 @@
     "web": "npx expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "^4.0.0",
+    "@expo/metro-runtime": "~4.0.0",
     "@lmstudio/sdk": "^0.4.2",
     "expo": "~52.0.19",
-    "expo-av": "^15.0.1",
-    "expo-document-picker": "^13.0.1",
-    "expo-file-system": "^18.0.6",
+    "expo-av": "~15.0.1",
+    "expo-document-picker": "~13.0.1",
+    "expo-file-system": "~18.0.6",
     "expo-status-bar": "~2.0.0",
-    "expo-video": "^2.0.2",
+    "expo-video": "~2.0.3",
     "ffmpeg-kit-react-native": "^6.0.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-native": "0.72",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.5",
     "react-native-ffmpeg": "^0.5.2",
     "react-native-fs": "^2.20.0",
-    "react-native-web": "0.18",
+    "react-native-video-processing": "^1.7.2",
+    "react-native-web": "~0.19.13",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1"
   },
