--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "expo-status-bar": "~2.0.0",
     "expo-video": "~2.0.3",
     "ffmpeg-kit-react-native": "^6.0.2",
-    "react": "18.3.1",
+    "react": "^18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
     "react-native-ffmpeg": "^0.5.2",
@@ -33,5 +33,6 @@
     "@types/react": "~18.3.12",
     "typescript": "^5.3.3"
   },
-  "private": true
+  "private": true,
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
