--- a/package.json
+++ b/package.json
@@ -9,18 +9,25 @@
     "web": "npx expo start --web"
   },
   "dependencies": {
+    "@azure/openai": "1.0.0-beta.6",
     "@expo/metro-runtime": "~4.0.0",
     "@lmstudio/sdk": "^0.4.2",
+    "dotenv": "^16.4.7",
     "expo": "~52.0.19",
     "expo-av": "~15.0.1",
     "expo-document-picker": "~13.0.1",
     "expo-file-system": "~18.0.6",
+    "expo-router": "^4.0.14",
     "expo-status-bar": "~2.0.0",
     "expo-video": "~2.0.3",
     "ffmpeg-kit-react-native": "^6.0.2",
+    "openai": "^4.77.0",
+    "process": "^0.11.10",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-config": "^1.5.3",
+    "react-native-dotenv": "^3.4.11",
     "react-native-ffmpeg": "^0.5.2",
     "react-native-fs": "^2.20.0",
     "react-native-video-processing": "^1.7.2",
