--- a/package.json
+++ b/package.json
@@ -30,6 +30,11 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-ffmpeg": "^0.5.2",
     "react-native-fs": "^2.20.0",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-gifted-chat": "^2.6.4",
+    "react-native-paper": "^5.12.5",
+    "react-native-reanimated": "^3.16.6",
+    "react-native-safe-area-context": "^5.0.0",
     "react-native-video-processing": "^1.7.2",
     "react-native-web": "~0.19.13",
     "react-redux": "^9.2.0",
