--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "ffmpeg-kit-react-native": "^6.0.2",
     "openai": "^4.77.0",
     "process": "^0.11.10",
-    "react": "^18.3.1",
+    "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
     "react-native-config": "^1.5.3",
@@ -45,6 +45,5 @@
     "@types/react": "~18.3.12",
     "typescript": "^5.3.3"
   },
-  "private": true,
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  "private": true
 }
