For safety reason, .env shouldnt be kept

--- a/.env
+++ b/.env
@@ -2,11 +2,11 @@
 EXPO_PUBLIC_DBF_RELATIVE_PATH=./data
 EXPO_PUBLIC_DBF_ABS_PATH=/mnt/vm03a/sls
 EXPO_PUBLIC_REMOTE_MODE=false
-EXPO_PUBLIC_OPENAI_AZURE_URL=https://cpullm.openai.azure.com/
-EXPO_PUBLIC_OPENAI_AZURE_KEY=46d9e39fe67a4821ab4bcb48e18db1fc
-EXPO_PUBLIC_OPENAI_AZURE_GPT_DEPLOYMENT_ID=gpt4o-ictproject
-EXPO_PUBLIC_OPENAI_AZURE_EMBD_URL=https://chatgptserver.openai.azure.com/
-EXPO_PUBLIC_OPENAI_AZURE_EMBD_KEY=8b5ed8dd51c644cc9ee2c561576d214c
+EXPO_PUBLIC_OPENAI_AZURE_URL=#
+EXPO_PUBLIC_OPENAI_AZURE_KEY=#
+EXPO_PUBLIC_OPENAI_AZURE_GPT_DEPLOYMENT_ID=#
+EXPO_PUBLIC_OPENAI_AZURE_EMBD_URL=#
+EXPO_PUBLIC_OPENAI_AZURE_EMBD_KEY=#
 EXPO_PUBLIC_OPENAI_AZURE_EMBD_DEPLOYMENT_ID=text-embedding-3-large
 EXPO_PUBLIC_NEXT_PUBLIC_POSTGREST_URL=http://localhost:5010
 EXPO_PUBLIC_MILVUS_URL=localhost:19530
